deploy/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-demo-deployment
  labels:
    group: moz-poc
spec:
  selector:
    matchLabels:
      app: secrets-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: secrets-demo
        group: moz-poc
        tier: vertrouwd
        ingress-controller-frontoffice-policy: allow
        egress-frontoffice-policy: allow
        access-to-connectionpool: allow
    spec:
      containers:
        - name: secrets-demo-container
          image: ghcr.io/hoangchu/secrets-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 550m
              memory: 550Mi
          livenessProbe:
            initialDelaySeconds: 3
            timeoutSeconds: 3
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 3
            timeoutSeconds: 3
            tcpSocket:
              port: 8080
      imagePullSecrets:
        - name: ghcr-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: secrets-demo-service
  labels:
    app: secrets-demo-service
    group: moz-poc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: secrets-demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secrets-demo-ingress
  labels:
    group: moz-poc
spec:
  ingressClassName: nginx
  rules:
    - host: secrets-demo.logius-moz-poc.test3.s15m.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secrets-demo-service
                port:
                  number: 8080
  tls:
    - hosts:
        - secrets-demo.logius-moz-poc.test3.s15m.nl
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-connectionpool # Allow pods with label "from-vertrouwd-to-zeer-vertrouwd" to access the database connection pool
  labels:
    group: sp-demo
spec:
  ingress:
    - from: # From which pods
        - podSelector:
            matchLabels:
              access-to-connectionpool: allow
  podSelector: # To which pods
    matchLabels:
      app: pooler
  policyTypes:
    - Ingress
